--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,10 @@
 platform = espressif32
 board = adafruit_feather_esp32s3
 framework = arduino
+lib_deps =
+    adafruit/Adafruit GFX Library @ ^1.10.10
+    adafruit/Adafruit SSD1306 @ ^2.4.6
+    paulstoffregen/Encoder @ ^1.4.1
+    thomasfredericks/Bounce2 @ ^2.57
+    max6675
+    br3ttb/PID @ ^1.2.1
